<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edit_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/id_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/name_hint" />

        <EditText
            android:id="@+id/edit_text_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/surname_hint" />

        <EditText
            android:id="@+id/edit_text_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/profession_hint" />


        <Button
            android:id="@+id/button_db_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/button_db_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_update" />

        <Button
            android:id="@+id/button_db_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete" />

        <Button
            android:id="@+id/button_db_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_read" />


        <TextView
            android:id="@+id/text_view_db_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>